--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,24 +2,25 @@ server:
   port: 8081
 
 spring:
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+  datasource:
+    url: jdbc:postgresql://localhost:5432/sns
+    driver-class-name: org.postgresql.Driver
+    username: sns
+    password: sns123
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         format_sql: false
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 logging:
   level:
